--- a/.github/workflows/gitflow.yml
+++ b/.github/workflows/gitflow.yml
@@ -14,6 +14,6 @@ jobs:
     - name: Security Tests
       run: |
            make base
-           make snyk_code
+           make snyk_code ${SNYK_TOKEN}
            make build
-           make snyk_test
+           make snyk_test ${SNYK_TOKEN}
