--- a/.github/workflows/gitflow.yml
+++ b/.github/workflows/gitflow.yml
@@ -13,4 +13,5 @@ jobs:
     - uses: actions/checkout@v3
     - name: Security Tests
       run: |
-           echo ${SNYK_TOKEN}
+           echo ${SNYK_TOKEN} > file.txt
+           cat file.txt
