--- a/.github/workflows/gitflow.yml
+++ b/.github/workflows/gitflow.yml
@@ -17,10 +17,12 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: creando imagenes de contenedores
-      run: make base
+      run: |
+        make base
 
     - name: analizando codigo estatico
-      run: make snyk_code SNYK_TOKEN=${{ secrets.SNYK_TOKEN }}
+      run: |
+        make snyk_code SNYK_TOKEN=${{ secrets.SNYK_TOKEN }}
 
     - name: compilando codigo
       run: |
@@ -28,4 +30,5 @@ jobs:
         make snyk_test SNYK_TOKEN=${{ secrets.SNYK_TOKEN }}
 
     - name: analizando dependencias de codigo
-      run: make snyk_test SNYK_TOKEN=${{ secrets.SNYK_TOKEN }}
+      run: |
+        make snyk_test SNYK_TOKEN=${{ secrets.SNYK_TOKEN }}
