--- a/.github/workflows/gitflow.yml
+++ b/.github/workflows/gitflow.yml
@@ -11,22 +11,24 @@ jobs:
     name: Default
     runs-on: ubuntu-latest
     timeout-minutes: 15
-
     steps:
+  
     - name: Checkout
     - uses: actions/checkout@v3
+
+    - name: creando imagenes de contenedores
       run: |
         make base
 
-    - name: analizando codigo estatico
-      run: |
-        make snyk_code SNYK_TOKEN=${{ secrets.SNYK_TOKEN }}
+    # - name: analizando codigo estatico
+    #   run: |
+    #     make snyk_code SNYK_TOKEN=${{ secrets.SNYK_TOKEN }}
 
-    - name: compilando codigo
-      run: |
-        make build
-        make snyk_test SNYK_TOKEN=${{ secrets.SNYK_TOKEN }}
+    # - name: compilando codigo
+    #   run: |
+    #     make build
+    #     make snyk_test SNYK_TOKEN=${{ secrets.SNYK_TOKEN }}
 
-    - name: analizando dependencias de codigo
-      run: |
-        make snyk_test SNYK_TOKEN=${{ secrets.SNYK_TOKEN }}
+    # - name: analizando dependencias de codigo
+    #   run: |
+    #   make snyk_test SNYK_TOKEN=${{ secrets.SNYK_TOKEN }}
