--- a/.github/workflows/gitflow.yml
+++ b/.github/workflows/gitflow.yml
@@ -15,10 +15,12 @@ jobs:
   
     - name: Checkout
     - uses: actions/checkout@v3
-
-    - name: creando imagenes de contenedores
       run: |
         make base
+
+    # - name: creando imagenes de contenedores
+    #   run: |
+    #     make base
 
     # - name: analizando codigo estatico
     #   run: |
