--- a/.github/workflows/gitflow.yml
+++ b/.github/workflows/gitflow.yml
@@ -7,43 +7,32 @@ on:
       - master
 
 jobs:
-  
-  build:
+  Build:
     name: Default
     runs-on: ubuntu-latest
     timeout-minutes: 15
-
     steps:
 
+# verificar fuente
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: build images
+# compilando imagenes de contenedores
+    - name: Build Images
       run: |
         make base
 
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-#     timeout-minutes: 15
-#     steps:
+# escaneando codigo estatico
+    - name: Scan Code
+      run: |
+        make snyk_code SNYK_TOKEN=${{ secrets.SNYK_TOKEN }}
 
-#     - uses: actions/checkout@v3
-#     - name: Checkout
+# compilando codigo
+    - name: Build Code
+      run: |
+        make build
 
-#     - name: creando imagenes de contenedores
-#       run: |
-#         make base
-
-    # - name: analizando codigo estatico
-    #   run: |
-    #     make snyk_code SNYK_TOKEN=${{ secrets.SNYK_TOKEN }}
-
-    # - name: compilando codigo
-    #   run: |
-    #     make build
-    #     make snyk_test SNYK_TOKEN=${{ secrets.SNYK_TOKEN }}
-
-    # - name: analizando dependencias de codigo
-    #   run: |
-    #   make snyk_test SNYK_TOKEN=${{ secrets.SNYK_TOKEN }}
+# escaneando dependencias de codigo
+    - name: Scan Dependencies
+      run: |
+        make snyk_test SNYK_TOKEN=${{ secrets.SNYK_TOKEN }}
