--- a/.github/workflows/gitflow.yml
+++ b/.github/workflows/gitflow.yml
@@ -1,10 +1,11 @@
 name: Gitflow
 
 on:
-  label:
-    types:
-      - created
   pull_request:
+    types:
+      - opened
+      - synchronize
+      - reopened
     branches:
       - release
       - master
