--- a/.github/workflows/gitflow.yml
+++ b/.github/workflows/gitflow.yml
@@ -11,8 +11,11 @@ on:
       - master
 
 jobs:
-  Build:
-    name: Gitflow
+
+### Validate ###
+###############
+  Gitflow:
+    name: Validate
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
@@ -25,3 +28,35 @@ jobs:
     - name: Print Envs
       run: |
         printenv
+
+### security ###
+################
+  Security:
+    name: Security
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    steps:
+
+# verificar fuente
+    - name: Checkout
+      uses: actions/checkout@v3
+
+# compilando imagenes de contenedores
+    - name: Build Images
+      run: |
+        make base
+
+# escaneando codigo estatico
+    - name: Scan Code
+      run: |
+        make snyk_code SNYK_TOKEN=${{ secrets.SNYK_TOKEN }}
+
+# compilando codigo
+    - name: Build Code
+      run: |
+        make build
+
+# escaneando dependencias de codigo
+    - name: Scan Dependencies
+      run: |
+        make snyk_test SNYK_TOKEN=${{ secrets.SNYK_TOKEN }}
